--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="right-phone-box">
-                        <p>Unduh Warta Jemaat : - <a href="tel:+62-2150105053"> Klik Disini</a></p>
+                        <p>Unduh Warta Jemaat : - <a href=""> Klik Disini</a></p>
                     </div>
                     <div class="our-link">
                         <ul>
