--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="right-phone-box">
-                        <p>Event Terdekat : - <a href="tel:+62-2150105053"> Cek Disini</a></p>
+                        <p>Event Terdekat : - <a href=""> Cek Disini</a></p>
                     </div>
                     <div class="our-link">
                         <ul>
